--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-flask
-twilio
-python-dotenv
-requests
-pillow
-torch
-torchvision
-groq
+Flask==3.0.3
+twilio==9.2.3
+python-dotenv==1.0.1
+requests==2.32.3
+whisper==1.1.10
+torch==2.2.2
+torchaudio==2.2.2
+gTTS==2.5.1
+groq==0.9.0
+google-generativeai==0.7.2
