--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ python-dotenv==1.0.1
 requests==2.32.3
 whisper==1.1.10
 torch
-torchaudio==2.2.2
+torchaudio
 gTTS==2.5.1
-groq==0.9.0
+groq
 google-generativeai==0.7.2
+
 
 
