--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,8 @@ Flask==3.0.3
 twilio==9.2.3
 python-dotenv==1.0.1
 requests==2.32.3
-whisper==1.1.10
-torch
-torchaudio
+openai-whisper==20231117
+torch==2.2.1
+torchaudio==2.2.1
 gTTS==2.5.1
-groq
-google-generativeai==0.7.2
-
-
-
+groq==0.9.0
