--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ twilio==9.2.3
 python-dotenv==1.0.1
 requests==2.32.3
 openai-whisper==20231117
-torch==2.2.1
-torchaudio==2.2.1
+torch==2.2.1+cpu
+torchaudio==2.2.1+cpu
 gTTS==2.5.1
 groq==0.9.0
